--- a/Fooddie/Layers/UI/Cells/FoodTableViewCell/FoodCollectionViewCell.xib
+++ b/Fooddie/Layers/UI/Cells/FoodTableViewCell/FoodCollectionViewCell.xib
@@ -4,68 +4,104 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FoodCollectionViewCell" id="gTV-IL-0wX" customClass="FoodCollectionViewCell" customModule="Fooddie" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="220"/>
-            <autoresizingMask key="autoresizingMask"/>
-            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="220"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FoodCollectionViewCell" id="UMa-Hp-pPG" customClass="FoodCollectionViewCell" customModule="Fooddie" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="341" height="280"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="q5X-XA-v1r">
+                <rect key="frame" x="0.0" y="0.0" width="341" height="280"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="RpJ-Nq-FkS">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="220"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gf7-DD-bES">
+                        <rect key="frame" x="0.0" y="0.0" width="341" height="280"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GUm-uc-qaF" customClass="CacheableImageView" customModule="Fooddie" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="GUm-uc-qaF" secondAttribute="height" multiplier="4:3" id="VEc-5D-SNg"/>
-                                    <constraint firstAttribute="height" constant="150" id="oga-7l-LCO"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <integer key="value" value="30"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5cu-MQ-VWK">
-                                <rect key="frame" x="0.0" y="150" width="200" height="70"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="N4L-MY-d0R">
+                                <rect key="frame" x="0.0" y="0.0" width="341" height="280"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="200" placeholderIntrinsicHeight="35" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQP-LH-44B">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="35"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="200" placeholderIntrinsicHeight="35" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cKB-Th-CTt">
-                                        <rect key="frame" x="0.0" y="35" width="200" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IV0-hS-hZ2">
+                                        <rect key="frame" x="95.5" y="0.0" width="150" height="150"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="150" placeholderIntrinsicHeight="150" image="image1.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hlm-nT-jsT" customClass="CacheableImageView" customModule="Fooddie" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Hlm-nT-jsT" secondAttribute="height" multiplier="1:1" id="B0C-a2-six"/>
+                                                    <constraint firstAttribute="width" constant="150" id="OKT-uI-2BW"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <integer key="value" value="75"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="XO8-Gk-OzF">
+                                        <rect key="frame" x="150.5" y="150" width="40" height="98"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="40" placeholderIntrinsicHeight="30" text="Ford" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ofd-Ta-PXX">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="49"/>
+                                                <fontDescription key="fontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="18"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="40" placeholderIntrinsicHeight="30" text="Ford" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tnn-Nt-0zQ">
+                                                <rect key="frame" x="0.0" y="49" width="40" height="49"/>
+                                                <fontDescription key="fontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="18"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="tUN-Ke-gCe">
+                                        <rect key="frame" x="123.5" y="248" width="94" height="32"/>
+                                    </stepper>
                                 </subviews>
                             </stackView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <constraints>
+                            <constraint firstItem="N4L-MY-d0R" firstAttribute="top" secondItem="Gf7-DD-bES" secondAttribute="top" id="3T3-z2-O6j"/>
+                            <constraint firstAttribute="trailing" secondItem="N4L-MY-d0R" secondAttribute="trailing" id="MmA-Dl-yxR"/>
+                            <constraint firstItem="N4L-MY-d0R" firstAttribute="leading" secondItem="Gf7-DD-bES" secondAttribute="leading" id="kHs-yo-NkQ"/>
+                            <constraint firstAttribute="bottom" secondItem="N4L-MY-d0R" secondAttribute="bottom" id="oEO-os-IUH"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" systemColor="opaqueSeparatorColor"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
-            </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <constraints>
-                <constraint firstItem="RpJ-Nq-FkS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="2GD-Qi-Msc"/>
-                <constraint firstAttribute="bottom" secondItem="RpJ-Nq-FkS" secondAttribute="bottom" id="3dK-tP-hfc"/>
-                <constraint firstItem="RpJ-Nq-FkS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="OAQ-B8-AW8"/>
-                <constraint firstAttribute="trailing" secondItem="RpJ-Nq-FkS" secondAttribute="trailing" id="ZjG-sG-65S"/>
-            </constraints>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Gf7-DD-bES" secondAttribute="trailing" id="SP6-dm-92b"/>
+                    <constraint firstItem="Gf7-DD-bES" firstAttribute="top" secondItem="q5X-XA-v1r" secondAttribute="top" id="d7S-Ek-PAe"/>
+                    <constraint firstItem="Gf7-DD-bES" firstAttribute="leading" secondItem="q5X-XA-v1r" secondAttribute="leading" id="ue3-Nq-iq5"/>
+                    <constraint firstAttribute="bottom" secondItem="Gf7-DD-bES" secondAttribute="bottom" id="yAH-SI-snd"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="341" height="272"/>
             <connections>
-                <outlet property="descLabel" destination="cKB-Th-CTt" id="VOJ-9i-uNh"/>
-                <outlet property="foodImageView" destination="GUm-uc-qaF" id="oVX-hr-DVY"/>
-                <outlet property="titleLabel" destination="XQP-LH-44B" id="GYw-65-FIa"/>
+                <outlet property="descLabel" destination="tnn-Nt-0zQ" id="355-Vf-2JU"/>
+                <outlet property="foodImageView" destination="Hlm-nT-jsT" id="G4a-4x-9lf"/>
+                <outlet property="titleLabel" destination="Ofd-Ta-PXX" id="XnF-qU-VMK"/>
             </connections>
-            <point key="canvasLocation" x="117.55725190839694" y="19.718309859154932"/>
+            <point key="canvasLocation" x="-84.512195121951223" y="2.5423728813559325"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="image1.png" width="384" height="384"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
